对话流程基本跑通。